# dog-go

./: README.md  requirements.txt  setup.cfg
src/dog_go/: .fetch_dogs.py.swp  .update_dogs.py.swp  fetch_dogs.py  get_dogs.py  selenium_manager.py  update_dogs.py
src/dog_go/data/: old_dogs.csv
src/dog_go_webapp/src/: manage.py
src/dog_go_webapp/src/data/: old_dogs.csv
src/dog_go_webapp/src/dog_go/: asgi.py  settings.py  urls.py  wsgi.py
src/dog_go_webapp/src/webapp/: urls.py  views.py
src/dog_go_webapp/src/webapp/authentication/: auth0.py
src/dog_go_webapp/src/webapp/templates/webapp/: base.html  filter.html  index.html  profile.html
