[metadata]
name = project_name
version=0.1.0
description = project_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjhammack/project_address
author = Benjamin Hammack
auther_email = bjhammack@protonmail.com
license = 
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: 
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: topic1 :: topic2 :: topic3
project_urls=
    Changelog = https://github.com/bjhammack/project_address/blob/master/CHANGELOG.md
    Bug Tracker = https://github.com/bjhammack/project_address/issues
keywords = 
    keyword1
    
[options]
packages =
    package_name
package_dir =
    =src
python_requires = >=3.6
zip_safe = false
install_requires =
    

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[options.package_data]
project_name = py.typed

[flake8]
max-line-length = 80
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, data/, logs/
